--- a/dokumentacija/Dodatak.tex
+++ b/dokumentacija/Dodatak.tex
@@ -59,6 +59,7 @@
 					\item Podjela uloga za kreiranje baze, izradu kontrolera, servisa i repozitorija, dokumentacije i logina i registgracije
 				\end{packed_item}
 			\end{packed_item}
+		 \item sastanak
 		\item[] \begin{packed_item}
 			\item Datum: 4. studenoga 2020.
 			\item Prisustvovali:  Dora Horvat, Dora Bortas, Ivana Cepetić, Luka Martić
@@ -68,6 +69,7 @@
 				
 			\end{packed_item}
 		\end{packed_item}
+	\item sastanak
 		\item[] \begin{packed_item}
 			\item Datum: 6. studenoga 2020.
 			\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
@@ -77,7 +79,7 @@
 				\item Podjela poslova koji se moraju obaviti do prve predaje projekta
 			\end{packed_item}
 		\end{packed_item}
-			
+			\item sastanak
 			\item[] \begin{packed_item}
 				\item Datum: 12. studenoga 2020.
 				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas, Ivana Cepetić, Luka Martić, Hrvoje Šimić
