Dodana aktivnost članova

--- a/dokumentacija/Dodatak.tex
+++ b/dokumentacija/Dodatak.tex
@@ -103,15 +103,15 @@
 			
 			\begin{longtabu} to \textwidth {|X[7, l]|X[1, c]|X[1, c]|X[1, c]|X[1, c]|X[1, c]|X[1, c]|X[1, c]|}
 								
-				\cline{2-8} \multicolumn{1}{c|}{\textbf{}} &     \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime voditelja }}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &
-				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &
-				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} \\ \hline 
+				\cline{2-8} \multicolumn{1}{c|}{\textbf{}} &     \multicolumn{1}{c|}{\rotatebox{90}{\textbf{ Mateja Iveta }}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Dora Bortas }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Dora Horvat }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Lea Brzica }}} &
+				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Vedran Hernaus }}} &
+				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Matija Holik }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Denis Đurašinović }}} \\ \hline 
 				\endfirsthead
 				
 			
-				\cline{2-8} \multicolumn{1}{c|}{\textbf{}} &     \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime voditelja}}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &
-				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &
-				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} \\ \hline 
+				\cline{2-8} \multicolumn{1}{c|}{\textbf{}} &     \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Mateja Iveta}}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Dora Bortas }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Dora Horvat }}} &
+				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Lea Brzica }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Vedran Hernaus }}} &
+				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Matija Holik }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Denis Đurašinović }}} \\ \hline 
 				\endhead
 				
 				
@@ -120,18 +120,18 @@
 				 
 				\endlastfoot
 				
-				Upravljanje projektom 		&  &  &  &  &  &  & \\ \hline
-				Opis projektnog zadatka 	&  &  &  &  &  &  & \\ \hline
+				Upravljanje projektom 		&  &  & 1 &  &  &  & \\ \hline
+				Opis projektnog zadatka 	&  &  & 6 &  &  &  & \\ \hline
 				
-				Funkcionalni zahtjevi       &  &  &  &  &  &  &  \\ \hline
-				Opis pojedinih obrazaca 	&  &  &  &  &  &  &  \\ \hline
-				Dijagram obrazaca 			&  &  &  &  &  &  &  \\ \hline
-				Sekvencijski dijagrami 		&  &  &  &  &  &  &  \\ \hline
-				Opis ostalih zahtjeva 		&  &  &  &  &  &  &  \\ \hline
+				Funkcionalni zahtjevi       &  & 3 &  &  &  &  &  \\ \hline
+				Opis pojedinih obrazaca 	&  & 5 &  &  &  &  &  \\ \hline
+				Dijagram obrazaca 			&  & 3 &  &  &  &  &  \\ \hline
+				Sekvencijski dijagrami 		&  & 3 &  &  &  &  &  \\ \hline
+				Opis ostalih zahtjeva 		&  & 1 &  &  &  &  &  \\ \hline
 
-				Arhitektura i dizajn sustava	 &  &  &  &  &  &  &  \\ \hline
-				Baza podataka				&  &  &  &  &  &  &   \\ \hline
-				Dijagram razreda 			&  &  &  &  &  &  &   \\ \hline
+				Arhitektura i dizajn sustava&  & 1 &  &  &  &  &  \\ \hline
+				Baza podataka				&  &  & 10 &  &  &  &   \\ \hline
+				Dijagram razreda 			&  & 5 &  &  &  &  &   \\ \hline
 				Dijagram stanja				&  &  &  &  &  &  &  \\ \hline
 				Dijagram aktivnosti 		&  &  &  &  &  &  &  \\ \hline
 				Dijagram komponenti			&  &  &  &  &  &  &  \\ \hline
@@ -143,12 +143,13 @@
 				Zaključak i budući rad 		&  &  &  &  &  &  &  \\  \hline
 				Popis literature 			&  &  &  &  &  &  &  \\  \hline
 				&  &  &  &  &  &  &  \\ \hline \hline
-				\textit{Dodatne stavke kako ste podijelili izradu aplikacije} 			&  &  &  &  &  &  &  \\ \hline
-				\textit{npr. izrada početne stranice} 				&  &  &  &  &  &  &  \\ \hline 
-				\textit{izrada baze podataka} 		 			&  &  &  &  &  &  & \\ \hline 
-				\textit{spajanje s bazom podataka} 							&  &  &  &  &  &  &  \\ \hline
-				\textit{back end} 							&  &  &  &  &  &  &  \\  \hline
-				 							&  &  &  &  &  &  &\\  \hline
+				Izrada frontenda 		 	& 10 &  &  & 25 & 20 &  &  \\ \hline
+				Izrada backenda 		 	& 25 &  &  &  & 4 & 30 & 4 \\ \hline 
+				Sigurnost					&  &  &  &  &  & 10 & \\ \hline 
+				Spajanje na bazu 		 	&25  &  &  &  &  &  & \\ \hline 
+				Modeliranje baze 			&  &  &  &  &  &  & 20 \\ \hline
+				Puštanje u pogon		 	&10  &  &  &  &  &  &  \\  \hline
+				 						
 				
 				
 			\end{longtabu}
