--- a/dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -16,7 +16,8 @@
 			0.2	& Napisan Opis projektnog zadatka & Horvat & 03.11.2020.	\\[3pt] \hline 
 			0.5 & Dodani Use Case dijagrami i sekvencijski dijagrami & Bortas & 04.11.2020. \\[3pt] \hline
 			0.7 & Dodan opis baze, tablica i ER dijagram & Horvat & 11.11.2020. \\[3pt]\hline
-			0.8 & Dodani dijagrami razreda & Bortas & 12.11.2020.
+			0.8 & Dodani dijagrami razreda & Bortas & 12.11.2020. \\[3pt]\hline
+			1.0 & Dodana aktivnost članova i provjera dokumentacije & Horvat & 13.11.  
 			
 			
 			
