--- a/dokumentacija/Literatura.tex
+++ b/dokumentacija/Literatura.tex
@@ -4,6 +4,8 @@
 			
 			
 			\item  Programsko inženjerstvo, FER ZEMRIS, \url{http://www.fer.hr/predmet/proinz}
+
+			\item A. Jović, N. Frid, D. Ivošević, Procesi programskog inženjerstva
 			
 			\item  I. Sommerville, "Software engineering", 8th ed, Addison Wesley, 2007.
 			
