--- a/dokumentacija/springRolice_rev1.tex
+++ b/dokumentacija/springRolice_rev1.tex
@@ -115,6 +115,7 @@
 	\include{Opis_projektnog_zadatka}
 	\include{Specifikacija_programske_potpore}
 	\include{Arhitektura}
+	\include{Implementacija}
     \include{Literatura}
 	
 	
