--- a/dokumentacija/Implementacija.tex
+++ b/dokumentacija/Implementacija.tex
@@ -46,7 +46,7 @@
 			Dijagram razmještaja statički je UML dijagram koji prikazuje i opisuje topologiju sustava te programsku potporu za implementaciju sustava. Korisnik, to jest klijent na svom osobnom računalu koristi web preglednik za pristup web aplikaciji. Na poslužiteljskom računalu nalazi se Tomcat web poslužitelj te PostgreSQL poslužitelj baze podataka. Komunikacija između klijenta i poslužitelja odvija se preko protokola aplikacijskog sloja HTTP.
 			
 			\begin{figure}[H]
-				\includegraphics[scale=0.5]{dijagrami/DeployDiagram} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+				\includegraphics[scale=0.5]{dijagrami/dijagramRazmještaja} %veličina slike u odnosu na originalnu datoteku i pozicija slike
 				\centering
 				\caption{Dijagram razmještaja}
 				\label{fig:dijagramRazmjestaja}
